Update WhatsApp contact section in contato.html

--- a/contato.html
+++ b/contato.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Contato — PrimeZilla</title>
+
+  <!-- Mesmo CSS das outras páginas -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <header class="topo">
-  <img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf" class="logo" alt="PrimeZilla">
+  <img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf"
+       class="logo" alt="PrimeZilla">
   <nav>
     <a href="index.html">Início</a>
     <a href="produtos.html">Produtos</a>
@@ -19,12 +23,16 @@
 
 <main class="container">
   <h2>Contato</h2>
-  <p>Entre em contato conosco pelo WhatsApp:</p>
-  <a class="botao" href="https://wa.me/5567992018672" target="_blank">Chamar no WhatsApp</a>
+  <p>Fale com nossa equipe pelo WhatsApp 👇</p>
+
+  <a class="botao" href="https://wa.me/5567992018672" target="_blank">
+    Chamar no WhatsApp
+  </a>
 </main>
 
 <footer class="footer">
   © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
 </footer>
+
 </body>
 </html>
