--- a/produtos.html
+++ b/produtos.html
@@ -6,7 +6,6 @@
 <title>Produtos — PrimeZilla</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 <header class="topo">
   <div class="brand">
@@ -14,7 +13,7 @@
   </div>
   <nav class="nav">
     <a href="index.html">Início</a>
-    <a href="produtos.html">Produtos</a>
+    <a href="produtos.html" class="ativo">Produtos</a>
     <a href="admin.html">Admin</a>
     <a href="contato.html">Contato</a>
   </nav>
@@ -22,7 +21,6 @@
 
 <main class="container">
   <h2>Produtos</h2>
-
   <div class="cats">
     <button class="catBtn" data-cat="all">Todos</button>
     <button class="catBtn" data-cat="pods">Pods</button>
@@ -30,7 +28,6 @@
     <button class="catBtn" data-cat="eletronicos">Eletrônicos</button>
     <button class="catBtn" data-cat="outros">Outros</button>
   </div>
-
   <div id="productsGrid" class="grid">Carregando...</div>
 </main>
 
@@ -39,6 +36,8 @@
 </footer>
 
 <script type="module">
+document.addEventListener('DOMContentLoaded', ()=>{
+
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
   import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
@@ -50,9 +49,9 @@
     appId: "1:910803172382:web:db82186d77b8281f13020f"
   };
 
-  const PHONE = '5567992018672';
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
+  const PHONE = '5567992018672';
 
   function esc(s){return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));}
 
@@ -61,7 +60,7 @@
 
   onSnapshot(q, snap => {
     const arr = [];
-    snap.forEach(d => arr.push(d.data()));
+    snap.forEach(d=> arr.push(d.data()));
     render(arr,'all');
     document.querySelectorAll('.catBtn').forEach(b =>
       b.onclick = ()=> render(arr, b.dataset.cat)
@@ -76,10 +75,8 @@
     list.forEach(p=>{
       if(!p.active) return;
       if(filter!=='all' && p.category !== filter) return;
-
       const img = p.imageUrl || p.image || 'placeholder.png';
       const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
-
       const el = document.createElement('div');
       el.className='card';
       el.innerHTML = `
@@ -88,7 +85,6 @@
         <p class="price">${esc(priceText)}</p>
         <a class="botao buy">Comprar</a>
       `;
-
       el.querySelector('.buy').addEventListener('click', ()=>{
         const variantLabel = (p.type==='pod')? 'Sabor' : 'Cor';
         const variant = (p.options && p.options[0])? p.options[0] : '-';
@@ -99,14 +95,13 @@ ${variantLabel}: ${variant}
 Valor: ${priceText}
 Forma de Pagamento: PIX\`
         );
-        window.open(\`https://wa.me/${PHONE}?text=${text}\`, '_blank');
+        window.open(\`https://wa.me/${PHONE}?text=${text}\`,'_blank');
       });
-
       grid.appendChild(el);
     });
-
     if(grid.children.length===0) grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
   }
+});
 </script>
 
 </body>
