--- a/produtos.html
+++ b/produtos.html
@@ -1,46 +1,44 @@
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+  import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
-  authDomain: "primezilla-70b94.firebaseapp.com",
-  projectId: "primezilla-70b94",
-  storageBucket: "primezilla-70b94.firebasestorage.app",
-  appId: "1:910803172382:web:db82186d77b8281f13020f"
-};
+  const firebaseConfig = {
+    apiKey: "AIzaSyDlzVS8ZkI4bVAmcFyKH1PDojvTXGYXyso",
+    authDomain: "primezilla-70b94.firebaseapp.com",
+    projectId: "primezilla-70b94",
+    storageBucket: "primezilla-70b94.firebasestorage.app",
+    appId: "1:910803172382:web:db82186d77b8281f13020f"
+  };
 
-const PHONE = '5567992018672';
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  const PHONE = '5567992018672';
 
-function esc(s){ 
-  return String(s||'').replace(/[&<>"']/g,m=>(
-    {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]
-  ));
-}
-
-document.addEventListener('DOMContentLoaded', ()=>{
+  function esc(s){
+    return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+  }
 
   const grid = document.getElementById('productsGrid');
+  grid.innerHTML = "Carregando...";
+
   const q = query(collection(db,'products'), orderBy('createdAt','desc'));
 
   onSnapshot(q, snap => {
     const arr = [];
-    snap.forEach(d => arr.push(d.data()));
+    snap.forEach(d=> arr.push(d.data()));
     render(arr,'all');
 
     document.querySelectorAll('.catBtn').forEach(btn=>{
       btn.onclick = ()=> render(arr, btn.dataset.cat);
     });
-
   }, err=>{
-    console.error(err);
     grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
+    console.error(err);
   });
 
   function render(list, filter){
     grid.innerHTML = '';
+
     list.forEach(p=>{
       if(!p.active) return;
       if(filter!=='all' && p.category !== filter) return;
@@ -48,35 +46,35 @@ document.addEventListener('DOMContentLoaded', ()=>{
       const img = p.imageUrl || p.image || 'placeholder.png';
       const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
 
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
+      const el = document.createElement('div');
+      el.className='card';
+      el.innerHTML = `
         <img src="${esc(img)}" alt="${esc(p.name)}">
         <h3>${esc(p.name)}</h3>
         <p class="price">${esc(priceText)}</p>
         <a class="botao buy">Comprar</a>
       `;
 
-      card.querySelector('.buy').addEventListener('click', ()=>{
+      el.querySelector('.buy').addEventListener('click', ()=>{
         const variantLabel = (p.type==='pod')? 'Sabor' : 'Cor';
         const variant = (p.options && p.options[0])? p.options[0] : '-';
+
         const text = encodeURIComponent(
-`Olá! Tenho interesse no produto: ${p.name}
+          `Olá! Tenho interesse no produto: ${p.name}
 Quantidade: 1
 ${variantLabel}: ${variant}
 Valor: ${priceText}
 Forma de Pagamento: PIX`
         );
+
         window.open(`https://wa.me/${PHONE}?text=${text}`,'_blank');
       });
 
-      grid.appendChild(card);
+      grid.appendChild(el);
     });
 
     if(grid.children.length===0){
       grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
     }
   }
-
-});
 </script>
