--- a/produtos.html
+++ b/produtos.html
@@ -1,3 +1,43 @@
+<!doctype html>
+<html lang="pt-BR">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Produtos — PrimeZilla</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header class="topo">
+  <div class="brand">
+    <img src="https://res.cloudinary.com/duwsueept/image/upload/ersuwnmpqepkaosb85gf" class="logo" alt="PrimeZilla">
+  </div>
+  <nav class="nav">
+    <a href="index.html">Início</a>
+    <a href="produtos.html" class="ativo">Produtos</a>
+    <a href="admin.html">Admin</a>
+    <a href="contato.html">Contato</a>
+  </nav>
+</header>
+
+<main class="container">
+  <h2>Produtos</h2>
+
+  <div class="cats">
+    <button class="catBtn" data-cat="all">Todos</button>
+    <button class="catBtn" data-cat="pods">Pods</button>
+    <button class="catBtn" data-cat="acessorios">Acessórios</button>
+    <button class="catBtn" data-cat="eletronicos">Eletrônicos</button>
+    <button class="catBtn" data-cat="outros">Outros</button>
+  </div>
+
+  <div id="productsGrid" class="grid">Carregando...</div>
+</main>
+
+<footer class="footer">
+  © 2025 PrimeZilla — SITE CRIADO POR @JHON_LORRAN_
+</footer>
+
+
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
   import { getFirestore, collection, query, orderBy, onSnapshot } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
@@ -10,44 +50,42 @@
     appId: "1:910803172382:web:db82186d77b8281f13020f"
   };
 
+  const PHONE = '5567992018672';
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
-  const PHONE = '5567992018672';
 
   function esc(s){
     return String(s||'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
   }
 
   const grid = document.getElementById('productsGrid');
-  grid.innerHTML = "Carregando...";
-
-  const q = query(collection(db,'products'), orderBy('createdAt','desc'));
+  const q = query(collection(db, 'products'), orderBy('createdAt', 'desc'));
 
   onSnapshot(q, snap => {
     const arr = [];
-    snap.forEach(d=> arr.push(d.data()));
-    render(arr,'all');
+    snap.forEach(d => arr.push(d.data()));
+    render(arr, 'all');
 
-    document.querySelectorAll('.catBtn').forEach(btn=>{
-      btn.onclick = ()=> render(arr, btn.dataset.cat);
+    document.querySelectorAll('.catBtn').forEach(btn => {
+      btn.onclick = () => render(arr, btn.dataset.cat);
     });
-  }, err=>{
+  }, err => {
     grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
     console.error(err);
   });
 
   function render(list, filter){
     grid.innerHTML = '';
+    list.forEach(p => {
 
-    list.forEach(p=>{
       if(!p.active) return;
-      if(filter!=='all' && p.category !== filter) return;
+      if(filter !== 'all' && p.category !== filter) return;
 
       const img = p.imageUrl || p.image || 'placeholder.png';
       const priceText = p.price ? `${p.currency||'R$'} ${Number(p.price).toFixed(2)}` : 'Consultar valores';
 
       const el = document.createElement('div');
-      el.className='card';
+      el.className = 'card';
       el.innerHTML = `
         <img src="${esc(img)}" alt="${esc(p.name)}">
         <h3>${esc(p.name)}</h3>
@@ -55,10 +93,9 @@
         <a class="botao buy">Comprar</a>
       `;
 
-      el.querySelector('.buy').addEventListener('click', ()=>{
-        const variantLabel = (p.type==='pod')? 'Sabor' : 'Cor';
-        const variant = (p.options && p.options[0])? p.options[0] : '-';
-
+      el.querySelector('.buy').addEventListener('click', () => {
+        const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
+        const variant = (p.options && p.options[0]) ? p.options[0] : '-';
         const text = encodeURIComponent(
           `Olá! Tenho interesse no produto: ${p.name}
 Quantidade: 1
@@ -66,15 +103,17 @@ ${variantLabel}: ${variant}
 Valor: ${priceText}
 Forma de Pagamento: PIX`
         );
-
-        window.open(`https://wa.me/${PHONE}?text=${text}`,'_blank');
+        window.open(`https://wa.me/${PHONE}?text=${text}`, '_blank');
       });
 
       grid.appendChild(el);
     });
 
-    if(grid.children.length===0){
+    if(grid.children.length === 0){
       grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
     }
   }
 </script>
+
+</body>
+</html>
